# C_programs

./: .gitignore  02-01-18.c  08-12-2017.c  2013-05-06_1.c  2013-05-06_5.c  2013-05-13_1.c  2013-05-27_1.c  2013-05-27_2.c  2013-05-27_3.c  Array.txt  GenArray.c  MinMaxArray.c  ReverseArray.c  SortArray.c  Time.c  arith.c  arith.cpf  arr1.c  arr2.c  arr3.c  arr4.c  arr5.c  byte.c  c1.c  c4.c  complex.c  datablock.c  datablock.h  du.c  even.c  ex.c  ex1.c  fac.c  fib.c  fromfile.c  gcd.c  guess.c  heartsimulation.c  lenandsq.c  linked_list.c  (+23 more)
Java/: arith.java  new.java
diploma/: CMakeLists.txt  RiDE_server.c  RiDE_server.h  TODO.txt  test.c
diploma/client/: CMakeLists.txt  client.c  test.c  utilities.c  utilities.h
diploma/src/: CMakeLists.txt  RiDE_server.c  RiDE_server.h  datablock.c  datablock.h  logger.c  logger.h  main.c  test.c  utilities.c  utilities.h
diploma/test/: CMakeLists.txt  RiDE_test.cpp
scientificC/1 занятие/: frame0.vtk  frame1.vtk  frame2.vtk  frame3.vtk  frame4.vtk  main.c  main_1.c
scientificC/2 занятие/: abs.c
scientificC/n-занятие/: ompcheck.c
